# agentic_rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  agent-api.py  build.sh  deploy.sh  docker-compose.yml  log.md  pyproject.toml  sample_agent.py  test-agent-api.py  test-document.txt
UI-Iluminati/: .dockerignore  INTEGRATION-GUIDE.md  middleware.ts  next.config.mjs  package-lock.json  package.json  proxy.ts  tsconfig.tsbuildinfo
UI-Iluminati/app/: globals.css  layout.tsx  page.tsx
UI-Iluminati/app/(auth)/: layout.tsx
UI-Iluminati/app/api/agentOS/projects/: route.ts
UI-Iluminati/app/api/agentOS/projects/[projectId]/: route.ts
UI-Iluminati/app/api/agentOS/projects/[projectId]/files/: route.ts
UI-Iluminati/app/api/agentOS/sandbox/close/: route.ts
UI-Iluminati/app/api/agentOS/sandbox/query/: route.ts
UI-Iluminati/app/api/agentOS/sessions/: route.ts
UI-Iluminati/app/api/agentOS/sessions/[sessionId]/: route.ts
UI-Iluminati/app/api/agentOS/teams/: route.ts
UI-Iluminati/app/api/agentOS/teams/[teamId]/: route.ts
UI-Iluminati/app/api/auth/login/: route.ts
UI-Iluminati/app/api/auth/session/: route.ts
UI-Iluminati/app/api/auth/signup/: route.ts
UI-Iluminati/components/: agent-trace.tsx  chat-interface.tsx
UI-Iluminati/components/auth/: login-form.tsx  signup-form.tsx
UI-Iluminati/components/providers/: auth-provider.tsx
UI-Iluminati/lib/: api.ts
UI-Iluminati/lib/auth/: provider.ts  proxy.ts  session.ts  types.ts
UI-Iluminati/lib/store/: auth-store.ts  chat-store.ts
(+6 files in other folders)
